# mini-quadlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  example  example.c  mini_quadlib.c  mini_quadlib.h  run_test.sh  test.c
include/: mini_quadlib.h
src/: geometric_controller.c  maths.c  robotics.c  utils.c
tests/: test_basic.c
